--- a/menaraf/src/RH/Sidebar.css
+++ b/menaraf/src/RH/Sidebar.css
@@ -1,29 +1,42 @@
 /* Sidebar.css */
+
 .sidebar {
-    width: 200px;
-    background-color: #f8f9fa;
-    padding: 20px;
-  }
-  
-  .sidebar .logo {
-    font-size: 1.5em;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .sidebar ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar ul li {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-    cursor: pointer;
-  }
-  
-  .sidebar ul li .icon {
-    margin-right: 10px;
-  }
-  
+  width: 200px;
+  background-color: #f8f9fa;
+  padding: 20px;
+}
+
+.sidebar .logo {
+  display: flex;
+  align-items: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.sidebar .logo img {
+  width: 40px; /* Ajustez la taille selon vos besoins */
+  height: auto;
+  margin-right: 10px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar ul li {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  cursor: pointer;
+}
+
+.sidebar ul li:hover {
+  background-color: #e9ecef;
+}
+
+.sidebar ul li .icon {
+  margin-right: 10px;
+}
